worked on elevator

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 
+repositories {
+    mavenCentral()
+    maven { url 'https://software-metadata.revrobotics.com/REVMaven/' }
+}
+
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
